# mouse-lang

./: Cargo.toml  language.md  piano-lang-idea.md  test_complex_expr.mouse  test_expr.mouse  test_nested.mouse
benches/: Improvements.md  README.md  query_benchmark.rs
mouse-src/: hello-world.mouse  socket_server.mouse  split_str.mouse  test.mouse
src/: errors.rs  main.rs  tests.rs
src/db/: mod.rs  mouse-db.md  query_engine.rs  row_schemaless.rs
src/interpreter/: mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/std/: mod.rs  socket_server.rs  str_utils.rs
src/std_lib/: mod.rs  print.rs  sleep.rs  socket_server.rs  str_utils.rs
