[package]
name = "mouse-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
chumsky = "0.11.1"
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
futures-util = "0.3"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.24"
tower = "0.5.2"
tower-http = "0.6.6"
