[package]
name = "mouse-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
chumsky = "0.11.1"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strsim = "0.11"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tower = "0.5.2"
tower-http = "0.6.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "query_benchmark"
harness = false
